<resources>
    <string name="app_name">EggshellentApp</string>
    <string name="logo">Logo</string>
    <string name="goodheath">GoodHeath</string>
    <string name="zerohunger">ZeroHunger</string>
    <string name="username">Email Address</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="signup">Signup</string>
    <string name="or_sign_in_using_google_account">Or Sign In Using Google Account</string>
    <string name="register">Register</string>
    <string name="fullname">FullName</string>
    <string name="phonenumber">PhoneNumber</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_account_login_here">Already Have Account? Login Here</string>
    <string name="please_enter_your_email_address">Please Enter Your Email Address</string>
    <string name="reset_password">Reset Password</string>
    <string name="back">Back</string>
    <string name="home">Home</string>
    <string name="order">Order</string>
    <string name="profile">Profile</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="eggshellent">EggShellent</string>
    <string name="search">Search</string>
    <string name="help">Help</string>
    <string name="dapoer_almira">Dapoer Almira</string>
    <string name="krian_sidoarjo_east_java_indonesia">Krian, Sidoarjo, East Java, Indonesia</string>
    <string name="cake_bread_cookies">Cake, Bread, Cookies</string>
    <string name="sign_out">Sign Out</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="bread">Bread</string>
    <string name="about">About</string>
    <string name="responsible">Responsible</string>
    <string name="copyright_eggshellent_team_2019_all_right_reserved">Copyright Eggshellent Team, @2019, All Right Reserved</string>
    <string name="benefits_of_fermented_chicken">Benefits Of Fermented Chicken EggShell Powder</string>
    <string name="enter_amount_of_bread">Enter Amount Of Bread</string>
    <string name="welcome">Welcome</string>
    <string name="a_marketplace_with_egg_shell_product">A MarketPlace with Egg Shell Product</string>
    <string name="our_product_contain_calsium_laktat">Our Product Contain Calsium Laktat</string>
    <string name="specification">Specification</string>
</resources>
