<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimary1"
    tools:context=".activity.ForgotActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="50dp"
        android:text="@string/forgot_password"
        android:gravity="center"
        android:textColor="@color/colorText"
        android:textStyle="bold"
        android:textSize="25sp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/please_enter_your_email_address"
        android:gravity="center"
        android:textSize="18sp"
        android:textColor="@color/colorText"
        android:textStyle="bold"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"/>
    <EditText
        android:id="@+id/et_forgot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/borderbox"
        android:layout_margin="50dp"
        android:padding="10dp"
        android:hint="@string/username"
        android:textColor="@color/colorText"
        android:inputType="textEmailAddress"/>
    <Button
        android:id="@+id/btn_reset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        android:background="@drawable/btnblue"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        android:textStyle="bold"
        android:text="@string/reset_password" />
    <TextView
        android:id="@+id/tv_back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:textSize="18sp"
        android:textColor="@color/colorText"
        android:textStyle="bold"/>

</LinearLayout>