<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary1"
    android:orientation="vertical"
    tools:context=".LoginActivity">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:src="@drawable/logo"
        android:layout_margin="50dp"
        android:contentDescription="@string/logo"/>
    <EditText
        android:id="@+id/et_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/borderbox"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:hint="@string/username"
        android:inputType="textEmailAddress"
        android:textSize="20sp"
        android:textColor="@color/colorText"
        android:padding="10dp"/>
    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/borderbox"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginTop="30dp"
        android:hint="@string/password"
        android:padding="10dp"
        android:inputType="textPassword"
        android:textSize="20sp"/>
    <TextView
        android:id="@+id/tv_forgot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="50dp"
        android:layout_marginStart="50dp"
        android:text="@string/forgot_password"
        android:gravity="end"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/colorText"/>
    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="70dp"
        android:layout_marginStart="70dp"
        android:background="@drawable/btnblue"
        android:text="@string/login"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:textSize="20sp"/>
    <Button
        android:id="@+id/btn_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="70dp"
        android:layout_marginEnd="70dp"
        android:background="@drawable/btnorange"
        android:text="@string/signup"
        android:textStyle="bold"
        android:textSize="20sp"/>
    <com.google.android.gms.common.SignInButton
        android:id="@+id/btn_google"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="70dp"
        android:layout_marginEnd="70dp">

    </com.google.android.gms.common.SignInButton>
</LinearLayout>