<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary1"
    android:orientation="vertical"
    tools:context=".RegisterActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textSize="25sp"
        android:textColor="@color/colorText"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_margin="60dp"/>
    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/borderbox"
        android:layout_marginTop="20dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:hint="@string/username"
        android:padding="10dp"
        android:textSize="20sp"
        android:textColor="@color/colorText"
        android:inputType="textEmailAddress" />
    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/borderbox"
        android:layout_marginTop="20dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:hint="@string/password"
        android:padding="10dp"
        android:textSize="20sp"
        android:textColor="@color/colorText"
        android:inputType="textPassword"/>
    <Button
        android:id="@+id/btn_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btnorange"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="70dp"
        android:layout_marginStart="70dp"
        android:text="@string/signup"
        android:textSize="18sp"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/tv_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:text="@string/already_have_account_login_here"
        android:gravity="center"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        android:textStyle="bold"/>

</LinearLayout>