<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragment.OrderFragment">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:textColor="@color/colorAccent"
            android:textSize="20sp"/>
    </android.support.v7.widget.Toolbar>
    <android.support.v7.widget.CardView
        android:id="@+id/cv_order"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@drawable/card"
        android:layout_margin="30dp"
        android:layout_below="@id/toolbar">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dapoer_almira"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"
            android:textSize="19sp"
            android:layout_gravity="center|top"
            android:layout_margin="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cake_bread_cookies"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textColor="@color/colorText"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/krian_sidoarjo_east_java_indonesia"
            android:layout_gravity="center|bottom"
            android:layout_marginBottom="5dp"/>

    </android.support.v7.widget.CardView>

</RelativeLayout>