<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.BreadActivity">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary">
        <ImageView
            android:id="@+id/img_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_arrow_back_black_24dp"
            android:layout_marginStart="20dp"
            android:contentDescription="@string/back" />
        <TextView
            android:id="@+id/tv_about"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bread"
            android:textColor="@color/colorAccent"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:textSize="20sp"/>
    </android.support.v7.widget.Toolbar>
    <ImageView
        android:id="@+id/img_bread"
        android:layout_width="200dp"
        android:layout_height="200dp" 
        android:layout_gravity="center"
        android:src="@drawable/bread"
        android:layout_margin="20dp"
        android:contentDescription="@string/bread" />
    <TextView
        android:id="@+id/tv_spec"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorAccent1"
        android:text="@string/specification"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:gravity="center"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="Made from arrowroot, low GI, high fiber, for type 2 diabetes mellitus"
        android:gravity="center"
        android:textColor="@color/colorText"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Made from tubers, contain iron, prevent asthma"
        android:gravity="center"
        android:textColor="@color/colorText"/>
    <EditText
        android:id="@+id/et_amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/card"
        android:hint="Enter Amount"
        android:layout_marginTop="30dp"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        android:padding="5dp"
        android:inputType="number"
        android:textColor="@color/colorText"/>
    <Button
        android:id="@+id/btn_order"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/btnblue"
        android:textColor="@color/colorPrimary"
        android:text="@string/order"
        android:textAllCaps="false"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        android:textStyle="bold"/>
</LinearLayout>