<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.OrderMenuActivity">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary">
        <ImageView
            android:id="@+id/img_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_arrow_back_black_24dp"
            android:layout_marginStart="20dp"
            android:contentDescription="@string/back" />
        <TextView
            android:id="@+id/tv_about"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order"
            android:textColor="@color/colorAccent"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:textSize="20sp"/>
    </android.support.v7.widget.Toolbar>
    <ImageView
        android:id="@+id/img_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/bread1"
        android:layout_below="@id/toolbar"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="50dp"
        android:layout_marginStart="50dp"
        android:contentDescription="@string/bread" />
    <ImageView
        android:id="@+id/img_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/cookies1"
        android:layout_below="@id/img_1"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="50dp"
        android:layout_marginStart="50dp"
        android:contentDescription="@string/bread" />
    <ImageView
        android:id="@+id/img_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/brownies1"
        android:layout_below="@id/img_2"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="50dp"
        android:layout_marginStart="50dp"
        android:contentDescription="@string/bread" />

</RelativeLayout>